Fixed more alignments

--- a/css/sections.css
+++ b/css/sections.css
@@ -134,7 +134,6 @@
 
 @media (max-width: 500px) {
   .catalog_section {
-    margin: 0;
     justify-content: center;
   }
 }
